* TLS/SSL support added
* IPv6 support added
* Performance optimizations / bug fixes with POSIX btree usage
* Performance improvements within xymond_rrd
* Convert various size variables to size_t throughout
* Add error handling to recover when messages greater than the internal MAX BUF size
  are found (must delete to not be wedged)
* Add better reporting for sendmessage() failures
* xymonlaunch: Add support for specifying a PIDFILE in tasks.cfg or clientlaunch.cfg
* xymonlaunch: Add SENDHUP support for optionally passing along signals to running 
  tasks (ie, for log rotation)


Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
===========================================
 
* rev 7740

* Fix broken 'TRACK' and 'OPTIONAL' identifiers in analysis.cfg
* Prevent logfetch from segfaulting if a file we're tracking line matching
  deltacounts for wasn't found
* Fix a type mismatch compiler warning in display group name alert matching


Changes from 4.3.21 -> 4.3.22 (6 Nov 2015)
===========================================

* rev 7723

* Ensure we don't leave xymond_hostdata or xymond_history zombies lying around
  after dropping host records (Reported by Scot Kreienkamp)
* Fix up HTML list layout to reflect current standards (Thanks, hallik@calyc3.com)
* Fix documentation incorrectly describing multigraph syntax as (e.g.) GRAPH_cpu.
  Should be GRAPHS_cpu (Thanks, Galen Johnson)
* Supports scientific notation for NCV data (Thanks, Axel Beckert)
* Increase resolution of xymonnet poll timing results (Thanks, Christoph Berg)
* New clock skew RRD files will allow for negative delta values (Thanks, Axel Beckert)
* Fix lots of typos! (Debian)
* Don't skip over "mailq.rrd" (Roland Rosenfeld)
* The signature algorithm used on an SSL-enabled TCP test run by xymonnet is now shown
  on the sslcert page. (Thanks, Ralph Mitchell)
* The cipher list displayed in 'sslcert' tests will now be limited to the cipher that was 