@@ -20,7 +20,7 @@ extern int debug;
 extern void errprintf(const char *fmt, ...);
 extern void real_dbgprintf(const char *fmt, ...);
 #define dbgprintf(...) { if (debug) real_dbgprintf(__VA_ARGS__); }
-#define logprintf(...) printf(__VA_ARGS__);
+extern void logprintf(const char *fmt, ...);
 extern void flush_errbuf(void);
 extern void set_debugfile(char *fn, int appendtofile);
 
